--- a/BloggoFrontend/pages/user-management.html
+++ b/BloggoFrontend/pages/user-management.html
@@ -2,242 +2,85 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Actions</title>
+  <title>User Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
   <style>
     body { background: #f9f9f9; }
-
-    /* ===== Navbar Styles ===== */
-    .glass-navbar {
-      position: sticky;
-      top: 1rem;
-      z-index: 1050;
-      display: flex;
-      justify-content: space-between;
-      padding: 1rem 2rem;
-      margin: 0 auto;
-      width: 60%;
-      border-radius: 20px;
-      margin-top: 1rem;
-      margin-bottom: 2rem;
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    }
-
-    .glass-navbar a {
-      color: #000000;
-      font-weight: 500;
-      margin: 0 1.2rem;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      padding: 0.5rem 1rem;
-      border-radius: 12px;
-    }
-
-    .glass-navbar a:hover {
-      background: rgba(255, 255, 255, 0.2);
-      transform: translateY(-2px);
-    }
-
-    .navbar-brand{
-      font-weight: 700;
-      font-size: 1.5rem;
-      color: #131212;
-      letter-spacing: 2px;
-      margin-right: 2rem;
-      user-select: none;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding-top: 5px;
-      padding-bottom: 5px;
-    }
-    /*header { border-bottom: 1px solid #ddd; background: #fff; }
-    .brand-logo { height: 40px; }*/
-    .table-card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      margin-bottom: 2rem;
-    }
-    .avatar {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    .profile-menu .dropdown-menu {
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-    }
-
-
+    .glass-navbar { position: sticky; top: 1rem; z-index: 1050; display: flex; justify-content: space-between; padding: 1rem 2rem; margin: 0 auto; width: 60%; border-radius: 20px; margin-top: 1rem; margin-bottom: 2rem; background: rgba(255, 255, 255, 0.15); backdrop-filter: blur(16px) saturate(180%); -webkit-backdrop-filter: blur(16px) saturate(180%); border: 1px solid rgba(255, 255, 255, 0.3); box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); }
+    .glass-navbar a { color: #000000; font-weight: 500; margin: 0 1.2rem; text-decoration: none; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 12px; }
+    .glass-navbar a:hover { background: rgba(255, 255, 255, 0.2); transform: translateY(-2px); }
+    .navbar-brand{ font-weight: 700; font-size: 1.5rem; color: #131212; letter-spacing: 2px; margin-right: 2rem; user-select: none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    .table-card { background: #fff; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.05); margin-bottom: 2rem; }
+    .avatar { width: 36px; height: 36px; border-radius: 50%; object-fit: cover; }
+    .profile-menu .dropdown-menu { border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.1); }
+    .sidebar { height: 100vh; position: sticky; top: 60px; background: #f8f9fa; border-right: 1px solid #dee2e6; padding-top: 20px; }
+    .sidebar a { display: block; padding: 12px 15px; color: #333; text-decoration: none; margin: 5px 0; border-radius: 8px; font-weight: 500; }
+    .sidebar a:hover, .sidebar a.active { background: #0d6efd; color: white; }
   </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<!--<header>
-  <div class="container d-flex justify-content-between align-items-center py-2">
-    <a class="brand" href="#" aria-label="Bloggo Home">
-      <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-    </a>
-    <nav class="d-flex align-items-center gap-2">
-      <div class="d-flex align-items-center">
-        <span class="text-black me-3">Welcome, Admin</span>
-        <img src="../assets/boy%20(1).png" alt="Admin Avatar" class="rounded-circle" width="40" height="40">
-      </div>
-    </nav>
-  </div>
-</header>-->
 <header class="sticky-top">
   <nav class="glass-navbar align-items-center">
-    <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNav" aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
+    <h1 class="navbar-brand">BLOGGO</h1>
     <div class="d-flex align-items-center">
       <div class="text-black me-3">Welcome, Admin</div>
-
-      <!-- Profile Dropdown -->
       <div class="dropdown profile-menu">
         <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
           <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
         </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-          <li>
-            <a class="dropdown-item" href="admin-dashboard.html">
-              <i class="fas fa-info me-2"></i> Admin Actions
-            </a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="user-management.html">
-              <i class="fas fa-user me-2"></i> User Management
-            </a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="post-management.html">
-              <i class="fas fa-blog me-2"></i> Post Management
-            </a>
-          </li>
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" href="admin-action.html"><i class="fas fa-info me-2"></i> Admin Actions</a></li>
+          <li><a class="dropdown-item" href="user-management.html"><i class="fas fa-user me-2"></i> User Management</a></li>
+          <li><a class="dropdown-item" href="post-management.html"><i class="fas fa-blog me-2"></i> Post Management</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li>
-            <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
-              <i class="fas fa-sign-out-alt me-2"></i> Logout
-            </a>
-          </li>
+          <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i> Logout</a></li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
 
-<div class="container my-5">
+<div class="container">
+  <div class="row">
+    <aside class="col-lg-2 sidebar">
+      <a href="admin-action.html"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
+      <a href="user-management.html" class="active"><i class="fas fa-users me-2"></i> Manage Users</a>
+      <a href="post-management.html"><i class="fas fa-blog me-2"></i> Manage Posts</a>
+      <a href="admin-settings.html"><i class="fas fa-cogs me-2"></i> Settings</a>
+    </aside>
 
-  <!-- USERS MANAGEMENT -->
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3>User Management</h3>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#userModal" onclick="openAddUserModal()">+ Add User</button>
-  </div>
-
-  <!-- Search Bar -->
-  <div class="mb-3">
-    <input type="text" id="userSearch" class="form-control" placeholder="Search users..." onkeyup="searchUsers()">
-  </div>
-
-  <div class="table-card">
-    <table class="table table-hover align-middle">
-      <thead class="table-light">
-      <tr>
-        <th>ID</th><th>Username</th><th>Email</th><th>Role</th><th>Status</th><th>Actions</th>
-      </tr>
-      </thead>
-      <tbody id="userTableBody"></tbody>
-    </table>
-  </div>
-
-  <!-- ADMIN ACTIONS MANAGEMENT -->
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3>Admin Actions</h3>
-    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#actionModal" onclick="openAddActionModal()">+ Add Action</button>
-  </div>
-
-  <div class="table-card">
-    <table class="table table-hover align-middle">
-      <thead class="table-light">
-      <tr>
-        <th>ID</th><th>Action</th><th>Target User</th><th>Date</th><th>Actions</th>
-      </tr>
-      </thead>
-      <tbody id="actionTableBody"></tbody>
-    </table>
-  </div>
-
-</div>
-
-<!-- User Modal -->
-<div class="modal fade" id="userModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog">
-    <form class="modal-content" id="userForm" onsubmit="saveUser(event)">
-      <div class="modal-header">
-        <h5 class="modal-title" id="userModalTitle">Add User</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+    <main class="col-lg-10">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2>Admin Actions</h2>
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#actionModal">+ Add Action</button>
       </div>
-      <div class="modal-body">
-        <input type="hidden" id="userId">
-        <div class="mb-3">
-          <label class="form-label">Username</label>
-          <input type="text" id="username" class="form-control" required>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Email</label>
-          <input type="email" id="email" class="form-control" required>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Role</label>
-          <select id="role" class="form-select" required>
-            <option value="USER">User</option>
-            <option value="ADMIN">Admin</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Membership</label>
-          <select id="status" class="form-select" required>
-            <option value="FREE">Free</option>
-            <option value="PAID">Paid</option>
-          </select>
-        </div>
+
+      <div class="table-card">
+        <table class="table table-hover align-middle">
+          <thead class="table-light">
+          <tr>
+            <th>ID</th><th>Action</th><th>Target User</th><th>Date</th><th>Status</th>
+          </tr>
+          </thead>
+          <tbody id="actionTableBody"></tbody>
+        </table>
       </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-      </div>
-    </form>
+    </main>
   </div>
 </div>
 
-<!-- Action Modal -->
+<!-- Modal -->
 <div class="modal fade" id="actionModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
-    <form class="modal-content" id="actionForm" onsubmit="saveAction(event)">
+    <form class="modal-content" id="actionForm">
       <div class="modal-header">
-        <h5 class="modal-title" id="actionModalTitle">Add Admin Action</h5>
+        <h5 class="modal-title">Add Admin Action</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <input type="hidden" id="actionId">
         <div class="mb-3">
           <label class="form-label">Action</label>
           <select id="actionName" class="form-select" required>
@@ -248,7 +91,7 @@
         </div>
         <div class="mb-3">
           <label class="form-label">Target User</label>
-          <input type="text" id="targetUser" class="form-control" placeholder="Username or ID" required>
+          <input type="text" id="targetUser" class="form-control" required>
         </div>
         <div class="mb-3">
           <label class="form-label">Date</label>
@@ -264,8 +107,69 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../js/user-management.js"></script>
-<script src="../js/profile.js"></script>
+<script>
+  const API_BASE = "http://localhost:8080/api/v1/admin-actions";
 
+  // 🔄 Load all actions
+  function loadActions() {
+    fetch(`${API_BASE}/getAll`)
+            .then(res => res.json())
+            .then(data => {
+              const tbody = document.getElementById("actionTableBody");
+              tbody.innerHTML = "";
+              data.data.forEach(action => {
+                tbody.innerHTML += `
+          <tr>
+            <td>${action.id}</td>
+            <td>${action.actionName}</td>
+            <td>${action.targetUser?.username || "-"}</td>
+            <td>${action.createdAt || "-"}</td>
+            <td>
+              <span class="badge ${action.actionType === 'ACTIVE' ? 'bg-success':'bg-secondary'}"
+                style="cursor:pointer"
+                onclick="toggleStatus(${action.id}, this)">
+                ${action.actionType}
+              </span>
+            </td>
+          </tr>`;
+              });
+            });
+  }
+
+  // 🔁 Toggle status
+  function toggleStatus(id, badge) {
+    fetch(`${API_BASE}/status/${id}?status=TOGGLE`, { method: "PATCH" })
+            .then(res => res.json())
+            .then(data => {
+              const updated = data.data;
+              badge.textContent = updated.actionType;
+              badge.className = "badge " + (updated.actionType === "ACTIVE" ? "bg-success" : "bg-secondary");
+            });
+  }
+
+  // ➕ Add action
+  document.getElementById("actionForm").addEventListener("submit", function(e){
+    e.preventDefault();
+    const adminUsername = "admin"; // replace with logged-in user if needed
+    const targetUser = document.getElementById("targetUser").value;
+    const actionName = document.getElementById("actionName").value;
+    const date = document.getElementById("actionDate").value;
+
+    fetch(`${API_BASE}/create?adminUsername=${adminUsername}&targetUsername=${targetUser}`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ actionName, createdAt: date, actionType: "ACTIVE" })
+    })
+            .then(res => res.json())
+            .then(() => {
+              document.getElementById("actionForm").reset();
+              bootstrap.Modal.getInstance(document.getElementById("actionModal")).hide();
+              loadActions();
+            });
+  });
+
+  // Auto-load table
+  document.addEventListener("DOMContentLoaded", loadActions);
+</script>
 </body>
 </html>
